# ec2-security-scanner

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compliance.md  pyproject.toml  remediation-guide.md  security-checks.md
ec2_security_scanner/: __init__.py  cli.py  compliance.py  html_reporter.py  scanner.py  utils.py
ec2_security_scanner/checks/: __init__.py  access_control.py  base.py  instance_security.py  logging_monitoring.py  network_exposure.py  network_security.py  patch_vulnerability.py  storage_security.py  tagging_inventory.py
ec2_security_scanner/templates/: report.html
tests/: __init__.py  test_check_fixes.py  test_cli.py  test_compliance.py  test_instance_security.py  test_network_security.py  test_scoring.py  test_storage_security.py  test_utils.py
