[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2-security-scanner"
version = "1.0.0"
description = "Comprehensive AWS EC2 security scanner with multi-framework compliance mapping"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Toc Consulting", email = "tarek@tocconsulting.fr"}
]
keywords = ["aws", "ec2", "security", "compliance", "scanner", "cloud", "audit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "moto[ec2,iam,ssm,cloudtrail,cloudwatch,inspector2,backup,guardduty]>=5.0",
]

[project.urls]
Homepage = "https://github.com/TocConsulting/ec2-security-scanner"
Documentation = "https://github.com/TocConsulting/ec2-security-scanner#readme"
Repository = "https://github.com/TocConsulting/ec2-security-scanner"
Issues = "https://github.com/TocConsulting/ec2-security-scanner/issues"

[project.scripts]
ec2-security-scanner = "ec2_security_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ec2_security_scanner*"]

[tool.setuptools.package-data]
"ec2_security_scanner.templates" = ["*.html"]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "ec2_security_scanner.egg-info"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
